# first_home_advisor

./: .gitignore  README.md  pyproject.toml
docs/assets/: diagram_uml_project.drawio
docs/en/: EN_architecture_and_functionality.docx  EN_class_diagram.docx
docs/pl/: PL_architektura_i_funkcjonalnosc.docx  PL_diagram_klas.docx  PL_wstepna_analiza_funkcjonalna.docx
src/backend/ml/: model.pkl  pl_mortgage_training_data.csv  train_model.py
src/backend/ml/archive/: cleaned_hmda_data.csv  prepare_hmda_data.py
src/backend/models/: user_data.py
src/backend/services/: app_controller.py  credit_calculator.py  risk_classifier.py
src/docs/: PL_wstepna_analiza_funkcjonalna.docx
src/docs/en/: EN_preliminary_functional_analysis.docx
src/frontend/: ui.py
tests/: test_credit_calculator.py  test_risk_classifier.py
